--- a/4th feb assignment.ipynb
+++ b/4th feb assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "69ed35d7-5cd5-41a6-ad95-5e3c9d013eab",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "[('Virat Kohli', 24936), ('Jack Kallis', 25534), ('Ricky ponting', 27483), ('Sachin Tendulkar', 34357)]\n"
      ]
     }
    ],
    "source": [
     "1.\n",
     "lst1 = [(\"Sachin Tendulkar\", 34357),(\"Ricky ponting\", 27483),(\"Jack Kallis\", 25534),(\"Virat Kohli\", 24936)]\n",
-    "lst1.sort(key = lambda x: x[1])\n"
+    "lst1.sort(key = lambda x: x[1])\n",
+    "print(lst1)"
    ]
   },
   {
