--- a/2nd feb assignment.ipynb
+++ b/2nd feb assignment.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4ae83a84-f1da-4b26-aeef-28449493cd2f",
    "metadata": {},
    "outputs": [
@@ -22,8 +22,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum of first 10 natural number is:  45\n",
-      "product of first 10 natural number is:  0\n"
+      "sum of first 10 natural number is:  55\n",
+      "product of first 10 natural number is:  3628800\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
     "2.\n",
     "sum = 0\n",
     "product = 1\n",
-    "for i in range (10):\n",
+    "for i in range (1,11):\n",
     "    sum += i\n",
     "    product *= i\n",
     "    \n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c4252d23-bfba-453d-8de6-595bb4b88d70",
    "metadata": {},
    "outputs": [
@@ -49,17 +49,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum of first 10 natural number is:  45\n",
-      "product of first 10 natural number is:  0\n"
+      "sum of first 10 natural number is:  55\n",
+      "product of first 10 natural number is:  3628800\n"
      ]
     }
    ],
    "source": [
-    "n = 0\n",
+    "n = 1\n",
     "sum = 0\n",
     "product = 1\n",
     "\n",
-    "while n < 10:\n",
+    "while n < 11:\n",
     "    sum += n\n",
     "    product *= n\n",
     "    n += 1\n",
