--- a/6th feb assignment.ipynb
+++ b/6th feb assignment.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "1ec4a5c8-53d7-451a-9cf5-4f1eab2a4917",
    "metadata": {},
    "outputs": [
@@ -81,19 +81,11 @@
     "        i = 'y'\n",
     "    elif i == 'c':\n",
     "        i = 'x'\n",
-    "    elif i == ' ':\n",
+    "    elif i.isspace() == True:\n",
     "        i = '$'\n",
     "    output += i\n",
     "print(output)    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "871d0125-0080-4ec5-a9b3-cc243e1e9ae3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
