--- a/17th feb assignment.ipynb
+++ b/17th feb assignment.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "a1847aa6-9890-4056-a899-cf55b67e01a5",
    "metadata": {},
    "outputs": [],
@@ -90,12 +90,12 @@
     "\n",
     "db = client['pwskills']\n",
     "\n",
-    "coll_pwskills = db['my_record']\n"
+    "coll_pwskills = db['my_record2']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "83cd064a-01cd-4bcf-8f12-efa8171923c6",
    "metadata": {},
    "outputs": [],
@@ -109,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "7669f5c6-9e56-4d7a-9a5f-6c3d51c49a36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x7f5baca598d0>"
+       "<pymongo.results.InsertOneResult at 0x7f5b721f96f0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "e2f0642e-0032-4f72-985c-68eff9948733",
    "metadata": {},
    "outputs": [],
@@ -146,25 +146,22 @@
     "  { \"name\": \"Susan\", \"address\": \"One way 98\" },\n",
     "  { \"name\": \"Vicky\", \"address\": \"Yellow Garden 2\" },\n",
     "  { \"name\": \"Ben\", \"address\": \"Park Lane 38\" },\n",
-    "  { \"name\": \"William\", \"address\": \"Central st 954\" },\n",
-    "  { \"name\": \"Chuck\", \"address\": \"Main Road 989\" },\n",
-    "  { \"name\": \"Viola\", \"address\": \"Sideway 1633\" }\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "dd15195a-6dc8-46be-9f32-d14a929a4514",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7f5ba807eb60>"
+       "<pymongo.results.InsertManyResult at 0x7f5b721f9810>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,20 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "fbaca35b-5124-4bc0-bf2a-72ef5a471045",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('6471898e742e9872e88f4296'),\n",
-       " 'name': 'sudh',\n",
+       "{'_id': ObjectId('649fc817ddc02a2c429d17f0'),\n",
+       " 'name': 'dev',\n",
        " 'class': 'data science masters',\n",
        " 'time': 'flexi'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "d9753a80-cf66-4b15-8705-a5419b6d37fd",
    "metadata": {},
    "outputs": [
@@ -207,40 +204,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('6471898e742e9872e88f4296'), 'name': 'sudh', 'class': 'data science masters', 'time': 'flexi'}\n",
-      "{'_id': ObjectId('64718ab8742e9872e88f4297'), 'mail_id': 'sudh@gmail.com', 'phone_number': 8945899806, 'address': 'Bengaluru'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f4298'), 'name': 'Amy', 'address': 'Apple st 652'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f4299'), 'name': 'Hannah', 'address': 'Mountain 21'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f429a'), 'name': 'Michael', 'address': 'Valley 345'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f429b'), 'name': 'Sandy', 'address': 'Ocean blvd 2'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f429c'), 'name': 'Betty', 'address': 'Green Grass 1'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f429d'), 'name': 'Richard', 'address': 'Sky st 331'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f429e'), 'name': 'Susan', 'address': 'One way 98'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f429f'), 'name': 'Vicky', 'address': 'Yellow Garden 2'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f42a0'), 'name': 'Ben', 'address': 'Park Lane 38'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f42a1'), 'name': 'William', 'address': 'Central st 954'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f42a2'), 'name': 'Chuck', 'address': 'Main Road 989'}\n",
-      "{'_id': ObjectId('64718d4f742e9872e88f42a3'), 'name': 'Viola', 'address': 'Sideway 1633'}\n",
-      "{'_id': ObjectId('64718e0d742e9872e88f42a4'), 'name': 'notebook', 'qty': 50, 'rating': [{'score': 8}, {'score': 9}], 'size': {'height': 11, 'width': 8.5, 'unit': 'in'}, 'status': 'A', 'tags': ['college-ruled', 'perforated']}\n",
-      "{'_id': ObjectId('64718ee6742e9872e88f42a5'), 'companyName': 'pwskills', 'product': 'Affordable AI', 'courseOffered': 'Machine Learning with Deployment'}\n",
-      "{'_id': ObjectId('64718ee6742e9872e88f42a6'), 'companyName': 'pwskills', 'product': 'Affordable AI', 'courseOffered': 'Deep Learning for NLP and Computer vision'}\n",
-      "{'_id': ObjectId('64718ee6742e9872e88f42a7'), 'companyName': 'pwskills', 'product': 'Master Program', 'courseOffered': 'Data Science Masters Program'}\n",
-      "{'_id': '3', 'companyName': 'pwskills', 'Faculty': 'XYZ'}\n",
-      "{'_id': '4', 'companyName': 'pwskills', 'Faculty': 'ABC'}\n",
-      "{'_id': '5', 'companyName': 'pwskills', 'Faculty': 'PQR'}\n",
-      "{'_id': ObjectId('649fc54addc02a2c429d17e2'), 'name': 'dev', 'class': 'data science masters', 'time': 'flexi'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17e3'), 'name': 'Amy', 'address': 'Apple st 652'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17e4'), 'name': 'Hannah', 'address': 'Mountain 21'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17e5'), 'name': 'Michael', 'address': 'Valley 345'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17e6'), 'name': 'Sandy', 'address': 'Ocean blvd 2'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17e7'), 'name': 'Betty', 'address': 'Green Grass 1'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17e8'), 'name': 'Richard', 'address': 'Sky st 331'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17e9'), 'name': 'Susan', 'address': 'One way 98'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17ea'), 'name': 'Vicky', 'address': 'Yellow Garden 2'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17eb'), 'name': 'Ben', 'address': 'Park Lane 38'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17ec'), 'name': 'William', 'address': 'Central st 954'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17ed'), 'name': 'Chuck', 'address': 'Main Road 989'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17ee'), 'name': 'Viola', 'address': 'Sideway 1633'}\n"
+      "{'_id': ObjectId('649fc817ddc02a2c429d17f0'), 'name': 'dev', 'class': 'data science masters', 'time': 'flexi'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f1'), 'name': 'Amy', 'address': 'Apple st 652'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f2'), 'name': 'Hannah', 'address': 'Mountain 21'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f3'), 'name': 'Michael', 'address': 'Valley 345'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f4'), 'name': 'Sandy', 'address': 'Ocean blvd 2'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f5'), 'name': 'Betty', 'address': 'Green Grass 1'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f6'), 'name': 'Richard', 'address': 'Sky st 331'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f7'), 'name': 'Susan', 'address': 'One way 98'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f8'), 'name': 'Vicky', 'address': 'Yellow Garden 2'}\n",
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f9'), 'name': 'Ben', 'address': 'Park Lane 38'}\n"
      ]
     }
    ],
@@ -251,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "e617c3ad-8421-4408-85f2-ddc01cc52633",
    "metadata": {},
    "outputs": [
@@ -259,8 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('64718d4f742e9872e88f42a0'), 'name': 'Ben', 'address': 'Park Lane 38'}\n",
-      "{'_id': ObjectId('649fc569ddc02a2c429d17eb'), 'name': 'Ben', 'address': 'Park Lane 38'}\n"
+      "{'_id': ObjectId('649fc81dddc02a2c429d17f9'), 'name': 'Ben', 'address': 'Park Lane 38'}\n"
      ]
     }
    ],
